--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -13,11 +13,17 @@ jobs:
   runs-on: ubuntu-latest
   
   steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Setup node
+      uses: actions/setup-node@v1
+
     - name: Install dependencies
       run: npm ci
+
     - name: Run tests
       run: npm test
+    
     - run: npm run build
     
