Added eslint config to repo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test":  "echo Test Passed"
+    "test": "echo Test Passed"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -38,5 +38,12 @@
   "bugs": {
     "url": "https://github.com/GPrendi30/sand/issues"
   },
-  "homepage": "https://github.com/GPrendi30/sand#readme"
+  "homepage": "https://github.com/GPrendi30/sand#readme",
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1"
+  }
 }
