--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "npm run lint && echo Test Passed",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint --fix ."
+    "lint": "npx eslint ./src",
+    "lint:fix": "npx eslint --fix ./src",
+    "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -16,6 +17,7 @@
     "express-fileupload": "^1.2.1",
     "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
+    "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
     "mongodb": "^4.2.0",
     "morgan": "~1.9.1"
