--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'"
   },
   "dependencies": {
+    "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -20,6 +21,7 @@
     "http-errors": "~1.6.3",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
+    "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
     "morgan": "~1.9.1"
   },
