--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,11 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
 
+      - name: Setup MongoDB
+        run: supercharge/mongodb-github-action@1.7.0
+        with:
+          mongodb-version: '4.4'
+          
       - name: Install dependencies
         run: npm ci
 
