--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
