--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "supertest": "^6.1.6"
   },
   "description": "Decentralized smart NFT analytics.",
   "main": "www",
