--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,9 @@ jobs:
             type=sha,format=long,prefix={{branch}}-
             type=raw,value=latest
 
+    - name: Create .env file
+      run: echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
+      
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
