--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
 
       - name: Setup MongoDB
-        run: supercharge/mongodb-github-action@1.7.0
+        uses: supercharge/mongodb-github-action@1.7.0
+        with:
+          mongodb-version: '4.4'
 
       - name: Install dependencies
         run: npm ci
