--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=development node ./bin/www",
     "start:production": "NODE_ENV=production node ./bin/www",
-    "test": "npm run lint && NODE_ENV=test mocha ./src/test",
+    "test": "npm run lint && NODE_ENV=test mocha --exit ./src/test",
     "lint": "npx eslint ./src",
     "lint:fix": "npx eslint --fix ./src",
     "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'"
