--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "api": "^4.1.0",
+    "axios": "^0.24.0",
     "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
@@ -26,7 +27,8 @@
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^3.1.0"
   },
   "description": "Decentralized smart NFT analytics.",
   "main": "www",
