--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
     "morgan": "~1.9.1",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "rewire": "^5.0.0"
   },
   "description": "Decentralized smart NFT analytics.",
   "main": "www",
