--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "npm run lint && NODE_ENV=test mocha --exit ./src/test",
     "lint": "npx eslint ./src",
     "lint:fix": "npx eslint --fix ./src",
-    "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'"
+    "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'",
+    "test:nolint": "NODE_ENV=test mocha --exit ./src/test",
+    "start:test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
     "chai": "^4.3.4",
@@ -26,6 +28,7 @@
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
     "morgan": "~1.9.1",
+    "rewire": "^5.0.0",
     "supertest": "^6.1.6"
   },
   "description": "Decentralized smart NFT analytics.",
