--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docs": "npx jsdoc -d documentation/docs -r --verbose ./src && echo '\n<-> Documentation created and stored in ./documentation/docs <->\n'"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
@@ -19,13 +20,16 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
+    "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   },
   "description": "Decentralized smart NFT analytics.",
   "main": "www",
