--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -23,6 +23,9 @@ jobs:
         uses: supercharge/mongodb-github-action@1.7.0
         with:
           mongodb-version: '4.4'
+          
+      - name: Create .env file
+        run: echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
 
       - name: Install dependencies
         run: npm ci
