--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
+        run: npm run start:test
         run: npm test
       
       - name: Merge main -> production
