--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run test server
         run: npm run start:test
+        
+      - name: Run tests
         run: npm test
       
       - name: Merge main -> production
