--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -30,7 +30,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run test server
         run: npm run start:test
+
+      - name: Run tests
         run: npm test
       
