--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,8 +28,8 @@ jobs:
         run: npm ci
 
       - name: Run test server
-        run: npm run start:test
-        
+        run: npm run start:test &
+
       - name: Run tests
         run: npm test
       
