--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
+    "glob-fs": "^0.1.7",
     "http-errors": "~1.6.3",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
@@ -64,7 +65,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1"
   },
-
   "engines": {
     "npm": ">=7",
     "node": ">=14"
