--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
@@ -34,6 +34,7 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "rewire": "^5.0.0",
+    "socket.io": "^4.4.0",
     "supertest": "^6.1.6"
   },
   "description": "Decentralized smart NFT analytics.",
@@ -64,7 +65,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1"
   },
-
   "engines": {
     "npm": ">=7",
     "node": ">=14"
