--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Create .env file
         run: echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
+        run: echo "REDIS_URI = ${{ secrets.REDIS_URI }}" >> .env
+        run: echo "REDIS_PASSWORD = ${{ secrets.REDIS_PASSWORD }}" >> .env
 
       - name: Install dependencies
         run: npm ci
