--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Create .env file
       run: echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
+      run: echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
+      run: echo "REDIS_URI = ${{ secrets.REDIS_URI }}" >> .env
+      run: echo "REDIS_PASSWORD = ${{ secrets.REDIS_PASSWORD }}" >> .env
       
     - name: Build and push
       uses: docker/build-push-action@v2
