Can render precompiled views in the client-side

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,8 @@
         "spaced-comment": "warn",
         "node/no-path-concat": "off",
         "eol-last": "warn",
-        "no-new-wrappers": "off"
+        "no-new-wrappers": "off",
+        "no-useless-escape": "off"
     },
     "ignorePatterns": ["src/test/*", "src/public/js/*.min.js"]
 }
