--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "start:test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "config": "^3.3.6",
     "cookie-parser": "~1.4.4",
@@ -30,6 +30,7 @@
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
     "mongodb": "^4.2.0",
+    "mongoose": "^6.1.0",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
@@ -64,7 +65,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1"
   },
-
   "engines": {
     "npm": ">=7",
     "node": ">=14"
