--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "start:test": "NODE_ENV=test node ./bin/www"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "chai": "^4.3.4",
     "config": "^3.3.6",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -26,6 +27,7 @@
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "http-errors": "~1.6.3",
+    "ioredis": "^4.28.2",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
@@ -64,7 +66,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1"
   },
-
   "engines": {
     "npm": ">=7",
     "node": ">=14"
