--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,10 @@ jobs:
           mongodb-version: '4.4'
 
       - name: Create .env file
-        run: echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
-        run: echo "REDIS_URI = ${{ secrets.REDIS_URI }}" >> .env
-        run: echo "REDIS_PASSWORD = ${{ secrets.REDIS_PASSWORD }}" >> .env
+        run: | 
+            echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
+            echo "REDIS_URI = ${{ secrets.REDIS_URI }}" >> .env
+            echo "REDIS_PASSWORD = ${{ secrets.REDIS_PASSWORD }}" >> .env
 
       - name: Install dependencies
         run: npm ci
