--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,10 +33,10 @@ jobs:
 
     - name: Create .env file
       run: |
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
-          echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" > .env
-          echo "REDIS_URI = ${{ secrets.REDIS_URI }}" >> .env
-          echo "REDIS_PASSWORD = ${{ secrets.REDIS_PASSWORD }}" >> .env
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+          echo "OPENSEA_API=${{ secrets.OPENSEA_API }}" >> .env
+          echo "REDIS_URI=${{ secrets.REDIS_URI }}" >> .env
+          echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> .env
       
     - name: Build and push
       uses: docker/build-push-action@v2
