--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "ejs": "~2.6.1",
+    "ejsc": "^0.1.0",
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
