--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "glob-fs": "^0.1.7",
     "http-errors": "~1.6.3",
     "ioredis": "^4.28.2",
+    "jdenticon": "^3.1.1",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
     "mocha": "^9.1.3",
