--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,9 @@
         "eol-last": "warn",
         "no-new-wrappers": "off",
         "no-useless-escape": "off",
-        "no-undef": "warn"
+        "no-undef": "warn",
+        "space-before-function-paren": "warn",
+        "quote-props": "warn"
     },
     "ignorePatterns": ["src/test/*", "src/public/js/*.min.js"]
 }
