--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "~4.16.1",
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.2",
+    "express-socket.io-session": "^1.3.5",
     "fs-extra": "^10.0.0",
     "glob-fs": "^0.1.7",
     "http-errors": "~1.6.3",
@@ -40,6 +41,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "rewire": "^5.0.0",
     "socket.io": "^4.4.0",
     "supertest": "^6.1.6"
