--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "glob-fs": "^0.1.7",
     "http-errors": "~1.6.3",
     "ioredis": "^4.28.2",
+    "izitoast": "^1.4.0",
     "jdenticon": "^3.1.1",
     "jsdoc": "^3.6.7",
     "method-override": "^3.0.0",
